--- a/environment.yml
+++ b/environment.yml
@@ -2,12 +2,14 @@ name: thesis
 channels:
   - defaults
 dependencies:
+  - anyio=3.5.0
   - appnope=0.1.2
   - argon2-cffi=21.3.0
   - argon2-cffi-bindings=21.2.0
   - asttokens=2.0.5
   - attrs=23.1.0
   - backcall=0.2.0
+  - beautifulsoup4=4.12.2
   - blas=1.0
   - bleach=4.1.0
   - bottleneck=1.3.5
@@ -15,7 +17,8 @@ dependencies:
   - ca-certificates=2023.08.22
   - certifi=2023.7.22
   - cffi=1.15.1
-  - charset-normalizer=2.0.4
+  - comm=0.1.2
+  - cyrus-sasl=2.1.28
   - debugpy=1.6.7
   - decorator=5.1.1
   - defusedxml=0.7.1
@@ -28,21 +31,23 @@ dependencies:
   - gst-plugins-base=1.14.1
   - gstreamer=1.14.1
   - icu=68.1
-  - ipykernel=6.9.1
+  - idna=3.4
+  - ipykernel=6.25.0
   - ipython=8.15.0
   - ipython_genutils=0.2.0
-  - ipywidgets=7.6.0
+  - ipywidgets=8.0.4
   - jedi=0.18.1
   - jinja2=3.1.2
   - jpeg=9e
-  - json5=0.9.6
   - jsonschema=4.17.3
   - jupyter=1.0.0
   - jupyter_client=7.4.9
-  - jupyter_console=6.4.4
-  - jupyter_core=4.11.2
+  - jupyter_console=6.6.3
+  - jupyter_core=5.3.0
+  - jupyter_server=1.23.4
   - jupyterlab_pygments=0.1.2
-  - krb5=1.19.4
+  - jupyterlab_widgets=3.0.5
+  - krb5=1.20.1
   - lerc=3.0
   - libclang=14.0.6
   - libclang13=14.0.6
@@ -56,7 +61,7 @@ dependencies:
   - libllvm14=14.0.6
   - libopenblas=0.3.21
   - libpng=1.6.39
-  - libpq=12.9
+  - libpq=12.15
   - libsodium=1.0.18
   - libtiff=4.5.1
   - libwebp=1.3.2
@@ -64,34 +69,38 @@ dependencies:
   - libxml2=2.10.4
   - libxslt=1.1.37
   - llvm-openmp=14.0.6
+  - lxml=4.9.3
   - lz4-c=1.9.4
   - markupsafe=2.1.1
   - matplotlib-inline=0.1.6
   - mistune=0.8.4
-  - nbconvert=5.5.0
-  - nbformat=5.1.3
+  - mysql=5.7.24
+  - nbclassic=0.5.5
+  - nbclient=0.5.13
+  - nbconvert=6.5.4
+  - nbformat=5.9.2
   - ncurses=6.4
   - nest-asyncio=1.5.6
-  - notebook=6.4.12
-  - nspr=4.35
-  - nss=3.89.1
+  - notebook=6.5.4
+  - notebook-shim=0.2.2
   - numexpr=2.8.7
   - numpy=1.26.0
   - numpy-base=1.26.0
-  - openssl=1.1.1w
+  - openssl=3.0.11
   - packaging=23.1
   - pandas=2.1.1
-  - pandoc=2.12
   - pandocfilters=1.5.0
   - parso=0.8.3
   - pcre=8.45
   - pexpect=4.8.0
   - pickleshare=0.7.5
   - pip=23.3
+  - platformdirs=3.10.0
   - ply=3.11
   - prometheus_client=0.14.1
   - prompt-toolkit=3.0.36
   - prompt_toolkit=3.0.36
+  - psutil=5.9.0
   - ptyprocess=0.7.0
   - pure_eval=0.2.2
   - pycparser=2.21
@@ -101,22 +110,26 @@ dependencies:
   - pyrsistent=0.18.0
   - python=3.10.13
   - python-dateutil=2.8.2
+  - python-fastjsonschema=2.16.2
   - python-tzdata=2023.3
   - pytz=2023.3.post1
   - pyzmq=23.2.0
   - qt-main=5.15.2
   - qt-webengine=5.15.9
-  - qtconsole=4.6.0
+  - qtconsole=5.4.2
+  - qtpy=2.2.0
   - qtwebkit=5.212
   - readline=8.2
   - send2trash=1.8.0
   - setuptools=68.0.0
   - sip=6.6.2
   - six=1.16.0
+  - sniffio=1.2.0
+  - soupsieve=2.5
   - sqlite=3.41.2
   - stack_data=0.2.0
   - terminado=0.17.1
-  - testpath=0.6.0
+  - tinycss2=1.2.1
   - tk=8.6.12
   - toml=0.10.2
   - tornado=6.3.3
@@ -126,10 +139,10 @@ dependencies:
   - tzdata=2023c
   - wcwidth=0.2.5
   - webencodings=0.5.1
+  - websocket-client=0.58.0
   - wheel=0.41.2
-  - widgetsnbextension=3.5.2
+  - widgetsnbextension=4.0.5
   - xz=5.4.2
-  - yaml=0.2.5
   - zeromq=4.3.4
   - zlib=1.2.13
   - zstd=1.5.5
