--- a/environment.yml
+++ b/environment.yml
@@ -13,11 +13,16 @@ dependencies:
   - blas=1.0
   - bleach=4.1.0
   - bottleneck=1.3.5
+  - brotli=1.0.9
+  - brotli-bin=1.0.9
   - bzip2=1.0.8
   - ca-certificates=2023.08.22
   - certifi=2023.7.22
   - cffi=1.15.1
+  - click=8.1.7
   - comm=0.1.2
+  - contourpy=1.0.5
+  - cycler=0.11.0
   - cyrus-sasl=2.1.28
   - debugpy=1.6.7
   - decorator=5.1.1
@@ -25,6 +30,9 @@ dependencies:
   - entrypoints=0.4
   - exceptiongroup=1.0.4
   - executing=0.8.3
+  - fonttools=4.25.0
+  - freetype=2.12.1
+  - gensim=4.3.0
   - gettext=0.21.0
   - giflib=5.2.1
   - glib=2.69.1
@@ -38,6 +46,7 @@ dependencies:
   - ipywidgets=8.0.4
   - jedi=0.18.1
   - jinja2=3.1.2
+  - joblib=1.2.0
   - jpeg=9e
   - jsonschema=4.17.3
   - jupyter=1.0.0
@@ -47,8 +56,13 @@ dependencies:
   - jupyter_server=1.23.4
   - jupyterlab_pygments=0.1.2
   - jupyterlab_widgets=3.0.5
+  - kiwisolver=1.4.4
   - krb5=1.20.1
+  - lcms2=2.12
   - lerc=3.0
+  - libbrotlicommon=1.0.9
+  - libbrotlidec=1.0.9
+  - libbrotlienc=1.0.9
   - libclang=14.0.6
   - libclang13=14.0.6
   - libcxx=14.0.6
@@ -71,9 +85,14 @@ dependencies:
   - llvm-openmp=14.0.6
   - lxml=4.9.3
   - lz4-c=1.9.4
+  - markdown-it-py=2.2.0
   - markupsafe=2.1.1
+  - matplotlib=3.7.2
+  - matplotlib-base=3.7.2
   - matplotlib-inline=0.1.6
+  - mdurl=0.1.0
   - mistune=0.8.4
+  - munkres=1.1.4
   - mysql=5.7.24
   - nbclassic=0.5.5
   - nbclient=0.5.13
@@ -81,12 +100,14 @@ dependencies:
   - nbformat=5.9.2
   - ncurses=6.4
   - nest-asyncio=1.5.6
+  - nltk=3.8.1
   - notebook=6.5.4
   - notebook-shim=0.2.2
   - numexpr=2.8.7
   - numpy=1.26.0
   - numpy-base=1.26.0
-  - openssl=3.0.11
+  - openjpeg=2.3.0
+  - openssl=3.0.12
   - packaging=23.1
   - pandas=2.1.1
   - pandocfilters=1.5.0
@@ -94,6 +115,7 @@ dependencies:
   - pcre=8.45
   - pexpect=4.8.0
   - pickleshare=0.7.5
+  - pillow=10.0.1
   - pip=23.3
   - platformdirs=3.10.0
   - ply=3.11
@@ -106,6 +128,7 @@ dependencies:
   - pycparser=2.21
   - pygments=2.15.1
   - pymongo=3.12.0
+  - pyparsing=3.0.9
   - pyqt=5.15.7
   - pyrsistent=0.18.0
   - python=3.10.13
@@ -120,10 +143,14 @@ dependencies:
   - qtpy=2.2.0
   - qtwebkit=5.212
   - readline=8.2
+  - regex=2023.10.3
+  - rich=13.3.5
+  - scipy=1.11.3
   - send2trash=1.8.0
   - setuptools=68.0.0
   - sip=6.6.2
   - six=1.16.0
+  - smart_open=5.2.1
   - sniffio=1.2.0
   - soupsieve=2.5
   - sqlite=3.41.2
@@ -133,6 +160,7 @@ dependencies:
   - tk=8.6.12
   - toml=0.10.2
   - tornado=6.3.3
+  - tqdm=4.65.0
   - traitlets=5.7.1
   - typing-extensions=4.7.1
   - typing_extensions=4.7.1
