--- a/environment.yml
+++ b/environment.yml
@@ -2,60 +2,63 @@ name: thesis
 channels:
   - defaults
 dependencies:
-  - anyio=3.5.0
+  - aiohttp=3.8.5
+  - aiosignal=1.2.0
   - appnope=0.1.2
   - argon2-cffi=21.3.0
   - argon2-cffi-bindings=21.2.0
   - asttokens=2.0.5
+  - async-timeout=4.0.2
   - attrs=23.1.0
   - backcall=0.2.0
-  - beautifulsoup4=4.12.2
   - blas=1.0
   - bleach=4.1.0
   - bottleneck=1.3.5
   - brotli=1.0.9
   - brotli-bin=1.0.9
+  - brotli-python=1.0.9
   - bzip2=1.0.8
   - ca-certificates=2023.08.22
   - certifi=2023.7.22
   - cffi=1.15.1
+  - charset-normalizer=2.0.4
   - click=8.1.7
-  - comm=0.1.2
-  - contourpy=1.0.5
+  - cryptography=41.0.3
   - cycler=0.11.0
   - cyrus-sasl=2.1.28
   - debugpy=1.6.7
   - decorator=5.1.1
   - defusedxml=0.7.1
+  - elasticsearch=7.13.3
   - entrypoints=0.4
   - exceptiongroup=1.0.4
   - executing=0.8.3
   - fonttools=4.25.0
   - freetype=2.12.1
+  - frozenlist=1.4.0
   - gensim=4.3.0
   - gettext=0.21.0
   - giflib=5.2.1
   - glib=2.69.1
   - gst-plugins-base=1.14.1
   - gstreamer=1.14.1
-  - icu=68.1
+  - icu=73.1
   - idna=3.4
-  - ipykernel=6.25.0
+  - ipykernel=6.9.1
   - ipython=8.15.0
   - ipython_genutils=0.2.0
-  - ipywidgets=8.0.4
+  - ipywidgets=7.6.0
   - jedi=0.18.1
   - jinja2=3.1.2
   - joblib=1.2.0
   - jpeg=9e
+  - json5=0.9.6
   - jsonschema=4.17.3
   - jupyter=1.0.0
   - jupyter_client=7.4.9
-  - jupyter_console=6.6.3
-  - jupyter_core=5.3.0
-  - jupyter_server=1.23.4
+  - jupyter_console=6.4.4
+  - jupyter_core=4.11.2
   - jupyterlab_pygments=0.1.2
-  - jupyterlab_widgets=3.0.5
   - kiwisolver=1.4.4
   - krb5=1.20.1
   - lcms2=2.12
@@ -63,7 +66,6 @@ dependencies:
   - libbrotlicommon=1.0.9
   - libbrotlidec=1.0.9
   - libbrotlienc=1.0.9
-  - libclang=14.0.6
   - libclang13=14.0.6
   - libcxx=14.0.6
   - libdeflate=1.17
@@ -81,35 +83,30 @@ dependencies:
   - libwebp=1.3.2
   - libwebp-base=1.3.2
   - libxml2=2.10.4
-  - libxslt=1.1.37
   - llvm-openmp=14.0.6
-  - lxml=4.9.3
   - lz4-c=1.9.4
-  - markdown-it-py=2.2.0
   - markupsafe=2.1.1
-  - matplotlib=3.7.2
-  - matplotlib-base=3.7.2
+  - matplotlib=3.5.3
+  - matplotlib-base=3.5.3
   - matplotlib-inline=0.1.6
-  - mdurl=0.1.0
   - mistune=0.8.4
+  - multidict=6.0.2
   - munkres=1.1.4
   - mysql=5.7.24
-  - nbclassic=0.5.5
-  - nbclient=0.5.13
-  - nbconvert=6.5.4
-  - nbformat=5.9.2
+  - nbconvert=5.5.0
+  - nbformat=5.1.3
   - ncurses=6.4
   - nest-asyncio=1.5.6
   - nltk=3.8.1
-  - notebook=6.5.4
-  - notebook-shim=0.2.2
+  - notebook=6.4.12
   - numexpr=2.8.7
   - numpy=1.26.0
   - numpy-base=1.26.0
   - openjpeg=2.3.0
-  - openssl=3.0.12
+  - openssl=1.1.1w
   - packaging=23.1
-  - pandas=2.1.1
+  - pandas=1.5.3
+  - pandoc=2.12
   - pandocfilters=1.5.0
   - parso=0.8.3
   - pcre=8.45
@@ -117,62 +114,89 @@ dependencies:
   - pickleshare=0.7.5
   - pillow=10.0.1
   - pip=23.3
-  - platformdirs=3.10.0
   - ply=3.11
   - prometheus_client=0.14.1
   - prompt-toolkit=3.0.36
   - prompt_toolkit=3.0.36
-  - psutil=5.9.0
   - ptyprocess=0.7.0
   - pure_eval=0.2.2
   - pycparser=2.21
   - pygments=2.15.1
   - pymongo=3.12.0
+  - pyopenssl=23.2.0
   - pyparsing=3.0.9
-  - pyqt=5.15.7
+  - pyqt=5.15.10
+  - pyqt5-sip=12.13.0
   - pyrsistent=0.18.0
-  - python=3.10.13
+  - pysocks=1.7.1
+  - python=3.10.0
   - python-dateutil=2.8.2
-  - python-fastjsonschema=2.16.2
   - python-tzdata=2023.3
   - pytz=2023.3.post1
   - pyzmq=23.2.0
   - qt-main=5.15.2
-  - qt-webengine=5.15.9
-  - qtconsole=5.4.2
-  - qtpy=2.2.0
-  - qtwebkit=5.212
+  - qtconsole=4.6.0
   - readline=8.2
   - regex=2023.10.3
-  - rich=13.3.5
+  - requests=2.31.0
   - scipy=1.11.3
-  - send2trash=1.8.0
+  - send2trash=1.8.2
   - setuptools=68.0.0
-  - sip=6.6.2
+  - sip=6.7.12
   - six=1.16.0
   - smart_open=5.2.1
-  - sniffio=1.2.0
-  - soupsieve=2.5
   - sqlite=3.41.2
   - stack_data=0.2.0
   - terminado=0.17.1
-  - tinycss2=1.2.1
+  - testpath=0.6.0
   - tk=8.6.12
-  - toml=0.10.2
+  - tomli=2.0.1
   - tornado=6.3.3
   - tqdm=4.65.0
   - traitlets=5.7.1
   - typing-extensions=4.7.1
   - typing_extensions=4.7.1
   - tzdata=2023c
+  - urllib3=1.26.18
   - wcwidth=0.2.5
   - webencodings=0.5.1
-  - websocket-client=0.58.0
   - wheel=0.41.2
-  - widgetsnbextension=4.0.5
+  - widgetsnbextension=3.5.2
   - xz=5.4.2
+  - yaml=0.2.5
+  - yarl=1.8.1
   - zeromq=4.3.4
   - zlib=1.2.13
   - zstd=1.5.5
   - pip:
-      - pyqt5-sip==12.11.0
+      - absl-py==2.0.0
+      - astunparse==1.6.3
+      - cachetools==5.3.2
+      - flatbuffers==23.5.26
+      - gast==0.5.4
+      - google-auth==2.23.4
+      - google-auth-oauthlib==1.0.0
+      - google-pasta==0.2.0
+      - grpcio==1.59.2
+      - h5py==3.10.0
+      - keras==2.14.0
+      - libclang==16.0.6
+      - markdown==3.5.1
+      - ml-dtypes==0.2.0
+      - oauthlib==3.2.2
+      - opt-einsum==3.3.0
+      - protobuf==4.25.0
+      - pyasn1==0.5.0
+      - pyasn1-modules==0.3.0
+      - requests-oauthlib==1.3.1
+      - rsa==4.9
+      - tensorboard==2.14.1
+      - tensorboard-data-server==0.7.2
+      - tensorflow==2.14.0
+      - tensorflow-estimator==2.14.0
+      - tensorflow-hub==0.15.0
+      - tensorflow-io-gcs-filesystem==0.34.0
+      - tensorflow-macos==2.14.0
+      - termcolor==2.3.0
+      - werkzeug==3.0.1
+      - wrapt==1.14.1
