--- a/environment.yml
+++ b/environment.yml
@@ -4,6 +4,7 @@ channels:
 dependencies:
   - aiohttp=3.8.5
   - aiosignal=1.2.0
+  - anyio=3.5.0
   - appnope=0.1.2
   - argon2-cffi=21.3.0
   - argon2-cffi-bindings=21.2.0
@@ -11,6 +12,7 @@ dependencies:
   - async-timeout=4.0.2
   - attrs=23.1.0
   - backcall=0.2.0
+  - beautifulsoup4=4.12.2
   - blas=1.0
   - bleach=4.1.0
   - bottleneck=1.3.5
@@ -23,6 +25,7 @@ dependencies:
   - cffi=1.15.1
   - charset-normalizer=2.0.4
   - click=8.1.7
+  - comm=0.1.2
   - cryptography=41.0.3
   - cycler=0.11.0
   - cyrus-sasl=2.1.28
@@ -44,21 +47,23 @@ dependencies:
   - gstreamer=1.14.1
   - icu=73.1
   - idna=3.4
-  - ipykernel=6.9.1
+  - ipykernel=6.25.0
   - ipython=8.15.0
   - ipython_genutils=0.2.0
-  - ipywidgets=7.6.0
+  - ipywidgets=8.0.4
   - jedi=0.18.1
   - jinja2=3.1.2
   - joblib=1.2.0
   - jpeg=9e
-  - json5=0.9.6
-  - jsonschema=4.17.3
+  - jsonschema=4.19.2
+  - jsonschema-specifications=2023.7.1
   - jupyter=1.0.0
   - jupyter_client=7.4.9
-  - jupyter_console=6.4.4
-  - jupyter_core=4.11.2
+  - jupyter_console=6.6.3
+  - jupyter_core=5.5.0
+  - jupyter_server=1.23.4
   - jupyterlab_pygments=0.1.2
+  - jupyterlab_widgets=3.0.5
   - kiwisolver=1.4.4
   - krb5=1.20.1
   - lcms2=2.12
@@ -89,16 +94,19 @@ dependencies:
   - matplotlib=3.5.3
   - matplotlib-base=3.5.3
   - matplotlib-inline=0.1.6
-  - mistune=0.8.4
+  - mistune=2.0.4
   - multidict=6.0.2
   - munkres=1.1.4
   - mysql=5.7.24
-  - nbconvert=5.5.0
-  - nbformat=5.1.3
+  - nbclassic=1.0.0
+  - nbclient=0.8.0
+  - nbconvert=7.10.0
+  - nbformat=5.9.2
   - ncurses=6.4
   - nest-asyncio=1.5.6
   - nltk=3.8.1
-  - notebook=6.4.12
+  - notebook=6.5.4
+  - notebook-shim=0.2.3
   - numexpr=2.8.7
   - numpy=1.26.0
   - numpy-base=1.26.0
@@ -106,7 +114,6 @@ dependencies:
   - openssl=1.1.1w
   - packaging=23.1
   - pandas=1.5.3
-  - pandoc=2.12
   - pandocfilters=1.5.0
   - parso=0.8.3
   - pcre=8.45
@@ -114,10 +121,12 @@ dependencies:
   - pickleshare=0.7.5
   - pillow=10.0.1
   - pip=23.3
+  - platformdirs=3.10.0
   - ply=3.11
   - prometheus_client=0.14.1
   - prompt-toolkit=3.0.36
   - prompt_toolkit=3.0.36
+  - psutil=5.9.0
   - ptyprocess=0.7.0
   - pure_eval=0.2.2
   - pycparser=2.21
@@ -127,28 +136,34 @@ dependencies:
   - pyparsing=3.0.9
   - pyqt=5.15.10
   - pyqt5-sip=12.13.0
-  - pyrsistent=0.18.0
   - pysocks=1.7.1
   - python=3.10.0
   - python-dateutil=2.8.2
-  - python-tzdata=2023.3
+  - python-fastjsonschema=2.16.2
   - pytz=2023.3.post1
   - pyzmq=23.2.0
   - qt-main=5.15.2
-  - qtconsole=4.6.0
+  - qtconsole=5.4.2
+  - qtpy=2.2.0
   - readline=8.2
+  - referencing=0.30.2
   - regex=2023.10.3
   - requests=2.31.0
+  - rpds-py=0.10.6
+  - scikit-learn=1.3.0
   - scipy=1.11.3
   - send2trash=1.8.2
   - setuptools=68.0.0
   - sip=6.7.12
   - six=1.16.0
   - smart_open=5.2.1
+  - sniffio=1.2.0
+  - soupsieve=2.5
   - sqlite=3.41.2
   - stack_data=0.2.0
   - terminado=0.17.1
-  - testpath=0.6.0
+  - threadpoolctl=2.2.0
+  - tinycss2=1.2.1
   - tk=8.6.12
   - tomli=2.0.1
   - tornado=6.3.3
@@ -160,10 +175,10 @@ dependencies:
   - urllib3=1.26.18
   - wcwidth=0.2.5
   - webencodings=0.5.1
+  - websocket-client=0.58.0
   - wheel=0.41.2
-  - widgetsnbextension=3.5.2
+  - widgetsnbextension=4.0.5
   - xz=5.4.2
-  - yaml=0.2.5
   - yarl=1.8.1
   - zeromq=4.3.4
   - zlib=1.2.13
