--- a/environment.yml
+++ b/environment.yml
@@ -2,15 +2,17 @@ name: thesis
 channels:
   - defaults
 dependencies:
-  - aiohttp=3.8.5
+  - aiohttp=3.9.0
   - aiosignal=1.2.0
   - anyio=3.5.0
   - appnope=0.1.2
   - argon2-cffi=21.3.0
   - argon2-cffi-bindings=21.2.0
   - asttokens=2.0.5
+  - async-lru=2.0.4
   - async-timeout=4.0.2
   - attrs=23.1.0
+  - babel=2.11.0
   - backcall=0.2.0
   - beautifulsoup4=4.12.2
   - blas=1.0
@@ -21,8 +23,8 @@ dependencies:
   - brotli-python=1.0.9
   - bzip2=1.0.8
   - ca-certificates=2023.08.22
-  - certifi=2023.7.22
-  - cffi=1.15.1
+  - certifi=2023.11.17
+  - cffi=1.16.0
   - charset-normalizer=2.0.4
   - click=8.1.7
   - comm=0.1.2
@@ -33,7 +35,6 @@ dependencies:
   - decorator=5.1.1
   - defusedxml=0.7.1
   - elasticsearch=7.13.3
-  - entrypoints=0.4
   - exceptiongroup=1.0.4
   - executing=0.8.3
   - fonttools=4.25.0
@@ -49,21 +50,26 @@ dependencies:
   - idna=3.4
   - ipykernel=6.25.0
   - ipython=8.15.0
-  - ipython_genutils=0.2.0
   - ipywidgets=8.0.4
   - jedi=0.18.1
   - jinja2=3.1.2
   - joblib=1.2.0
   - jpeg=9e
+  - json5=0.9.6
   - jsonschema=4.19.2
   - jsonschema-specifications=2023.7.1
   - jupyter=1.0.0
-  - jupyter_client=7.4.9
+  - jupyter-lsp=2.2.0
+  - jupyter_client=8.6.0
   - jupyter_console=6.6.3
   - jupyter_core=5.5.0
-  - jupyter_server=1.23.4
+  - jupyter_events=0.8.0
+  - jupyter_server=2.10.0
+  - jupyter_server_terminals=0.4.4
+  - jupyterlab=4.0.8
   - jupyterlab_pygments=0.1.2
-  - jupyterlab_widgets=3.0.5
+  - jupyterlab_server=2.25.1
+  - jupyterlab_widgets=3.0.9
   - kiwisolver=1.4.4
   - krb5=1.20.1
   - lcms2=2.12
@@ -95,23 +101,23 @@ dependencies:
   - matplotlib-base=3.5.3
   - matplotlib-inline=0.1.6
   - mistune=2.0.4
-  - multidict=6.0.2
+  - multidict=6.0.4
   - munkres=1.1.4
   - mysql=5.7.24
-  - nbclassic=1.0.0
   - nbclient=0.8.0
   - nbconvert=7.10.0
   - nbformat=5.9.2
   - ncurses=6.4
   - nest-asyncio=1.5.6
   - nltk=3.8.1
-  - notebook=6.5.4
+  - notebook=7.0.6
   - notebook-shim=0.2.3
   - numexpr=2.8.7
   - numpy=1.26.0
   - numpy-base=1.26.0
   - openjpeg=2.3.0
   - openssl=1.1.1w
+  - overrides=7.4.0
   - packaging=23.1
   - pandas=1.5.3
   - pandocfilters=1.5.0
@@ -120,7 +126,7 @@ dependencies:
   - pexpect=4.8.0
   - pickleshare=0.7.5
   - pillow=10.0.1
-  - pip=23.3
+  - pip=23.3.1
   - platformdirs=3.10.0
   - ply=3.11
   - prometheus_client=0.14.1
@@ -131,7 +137,6 @@ dependencies:
   - pure_eval=0.2.2
   - pycparser=2.21
   - pygments=2.15.1
-  - pymongo=3.12.0
   - pyopenssl=23.2.0
   - pyparsing=3.0.9
   - pyqt=5.15.10
@@ -140,15 +145,19 @@ dependencies:
   - python=3.10.0
   - python-dateutil=2.8.2
   - python-fastjsonschema=2.16.2
+  - python-json-logger=2.0.7
   - pytz=2023.3.post1
-  - pyzmq=23.2.0
+  - pyyaml=6.0.1
+  - pyzmq=25.1.0
   - qt-main=5.15.2
-  - qtconsole=5.4.2
-  - qtpy=2.2.0
+  - qtconsole=5.5.0
+  - qtpy=2.4.1
   - readline=8.2
   - referencing=0.30.2
   - regex=2023.10.3
   - requests=2.31.0
+  - rfc3339-validator=0.1.4
+  - rfc3986-validator=0.1.1
   - rpds-py=0.10.6
   - scikit-learn=1.3.0
   - scipy=1.11.3
@@ -179,7 +188,8 @@ dependencies:
   - wheel=0.41.2
   - widgetsnbextension=4.0.5
   - xz=5.4.2
-  - yarl=1.8.1
+  - yaml=0.2.5
+  - yarl=1.9.3
   - zeromq=4.3.4
   - zlib=1.2.13
   - zstd=1.5.5
@@ -188,6 +198,7 @@ dependencies:
       - astunparse==1.6.3
       - autocommand==2.2.2
       - cachetools==5.3.2
+      - dnspython==2.4.2
       - flatbuffers==23.5.26
       - gast==0.5.4
       - google-auth==2.23.4
@@ -201,11 +212,13 @@ dependencies:
       - libclang==16.0.6
       - markdown==3.5.1
       - ml-dtypes==0.2.0
+      - mongo-connector==3.1.1
       - oauthlib==3.2.2
       - opt-einsum==3.3.0
       - protobuf==4.25.0
       - pyasn1==0.5.0
       - pyasn1-modules==0.3.0
+      - pymongo==4.6.1
       - requests-oauthlib==1.3.1
       - rsa==4.9
       - tensorboard==2.14.1
